// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Common.Error props bgStyle 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props bgStyle 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-outline"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props bgStyle 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-outline"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props bgStyle 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-transparent"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props bgStyle 5`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-transparent"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props bgStyle 6`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-outline"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props borderRadius 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "8px",
    }
  }
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkGrammar 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkGrammar 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkGrammar 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkGrammar 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkHighlight 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkHighlight 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkHighlight 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkHighlight 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkSpaces 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkSpaces 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkSpaces 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props checkSpaces 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props className 1`] = `
<div
  className="uu5-common-error my-classname uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 1`] = `
<div
  className="color-schema-default uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 2`] = `
<div
  className="color-schema-red uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 3`] = `
<div
  className="color-schema-red uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 4`] = `
<div
  className="color-schema-red-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 5`] = `
<div
  className="color-schema-red-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 6`] = `
<div
  className="color-schema-green uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 7`] = `
<div
  className="color-schema-green uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 8`] = `
<div
  className="color-schema-green-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 9`] = `
<div
  className="color-schema-green-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 10`] = `
<div
  className="color-schema-yellow uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 11`] = `
<div
  className="color-schema-yellow uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 12`] = `
<div
  className="color-schema-yellow-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 13`] = `
<div
  className="color-schema-yellow-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 14`] = `
<div
  className="color-schema-purple uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 15`] = `
<div
  className="color-schema-purple uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 16`] = `
<div
  className="color-schema-purple-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 17`] = `
<div
  className="color-schema-purple-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 18`] = `
<div
  className="color-schema-brown uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 19`] = `
<div
  className="color-schema-brown uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 20`] = `
<div
  className="color-schema-brown-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 21`] = `
<div
  className="color-schema-brown-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 22`] = `
<div
  className="color-schema-orange uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 23`] = `
<div
  className="color-schema-orange uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 24`] = `
<div
  className="color-schema-orange-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 25`] = `
<div
  className="color-schema-orange-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 26`] = `
<div
  className="color-schema-cyan uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 27`] = `
<div
  className="color-schema-cyan uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 28`] = `
<div
  className="color-schema-cyan-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 29`] = `
<div
  className="color-schema-cyan-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 30`] = `
<div
  className="color-schema-grey uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 31`] = `
<div
  className="color-schema-grey uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 32`] = `
<div
  className="color-schema-grey-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 33`] = `
<div
  className="color-schema-grey-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 34`] = `
<div
  className="color-schema-pink uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 35`] = `
<div
  className="color-schema-pink uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 36`] = `
<div
  className="color-schema-pink-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 37`] = `
<div
  className="color-schema-pink-rich uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props colorSchema 38`] = `
<div
  className="color-schema-pink uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props content 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      12345
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props content 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      <UU5.Common.TextCorrectorContextConsumer
        key="0"
        text="This is Content from ContentMixin"
      />
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props content 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      <UU5.Common.TextCorrectorContextConsumer
        key="0"
        text="This is Content from ContentMixin"
      />
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props content 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      12345
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props controlled 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props controlled 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props controlled 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props controlled 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props default props 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props disabled 1`] = `
<div
  className="uu5-common-error uu5-common-disabled uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Common.Error props disabled 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props disabled 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props disabled 4`] = `
<div
  className="uu5-common-error uu5-common-disabled uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Common.Error props dynamic 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props dynamic 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props dynamic 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props dynamic 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props elevation 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled uu5-common-elevation--1"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props elevation 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled uu5-common-elevation-5"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props elevation 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled uu5-common-elevation-5"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props elevation 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled uu5-common-elevation--1"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props error 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props error props test 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="errorID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props error props test 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="errorID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props errorData 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props errorInfo 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props hidden 1`] = `
<div
  className="uu5-common-error uu5-common-hidden uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props hidden 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props hidden 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props hidden 4`] = `
<div
  className="uu5-common-error uu5-common-hidden uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props id 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="myId"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props ignoreHTML 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props ignoreHTML 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props ignoreHTML 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props ignoreHTML 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props inline 1`] = `
<span
  className="uu5-common-error uu5-common-error-inline uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  Error
</span>
`;

exports[`UU5.Common.Error props inline 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props inline 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props inline 4`] = `
<span
  className="uu5-common-error uu5-common-error-inline uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  Error
</span>
`;

exports[`UU5.Common.Error props mainAttrs 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props moreInfo 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
  <div
    className="uu5-common-error-details"
    key="errorDetails"
  >
    <a
      className="uu5-common-error-details-button"
      onClick={[Function]}
    >
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zobrazit podrobnosti o chybě.",
            "en": "View error details.",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
      <span
        className="mdi mdi-menu-down uu5-common-error-icon"
      />
    </a>
    <div
      className="uu5-common-error-details-body"
      id="uuID-error"
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="uu5-common-error-pre-wrapper"
      >
        <Button
          baseline={false}
          bgStyle="filled"
          borderRadius={null}
          className="uu5-common-error-copy-info-button"
          colorSchema={null}
          content={
            <Lsi
              allowTags={Array []}
              className={null}
              content={null}
              controlled={true}
              disabled={false}
              dynamic={false}
              hidden={false}
              id={null}
              ignoreInnerHTML={false}
              language={null}
              lsi={
                Object {
                  "cs": "Kopírovat podrobnosti o chybě",
                  "en": "Copy error details",
                }
              }
              mainAttrs={null}
              name={null}
              nestingLevel={null}
              noIndex={false}
              params={null}
              parent={null}
              pureRender={false}
              ref_={null}
              selected={false}
              style={null}
              tooltip={null}
            />
          }
          controlled={true}
          disabled={false}
          displayBlock={false}
          dynamic={false}
          elevation={null}
          elevationHover={null}
          hidden={false}
          href={null}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          offset={0}
          onClick={[Function]}
          pressed={false}
          pureRender={false}
          ref_={null}
          selected={false}
          size="m"
          smoothScroll={1000}
          style={null}
          target="_self"
          tooltip={null}
        />
        <pre
          className="uu5-common-error-pre"
        >
          {
  "message": "Error",
  "data": null,
  "stackTrace": [],
  "uuIdentity": null,
  "url": "http://example.com/test_url_for_tools-ifc.test.js?param=value",
  "time": null,
  "navigator": {
    "appCodeName": "Mozilla",
    "appName": "Netscape",
    "appVersion": "4.0",
    "cookieEnabled": true,
    "hardwareConcurrency": 8,
    "language": "en-US",
    "languages": [
      "en-US",
      "en"
    ],
    "onLine": true,
    "platform": "",
    "product": "Gecko",
    "productSub": "20030107",
    "userAgent": "Mozilla/5.0 (win32) AppleWebKit/537.36 (KHTML, like Gecko) jsdom",
    "vendor": "Apple Computer, Inc.",
    "vendorSub": ""
  },
  "libs": {}
}
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props moreInfo 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props moreInfo 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props moreInfo 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
  <div
    className="uu5-common-error-details"
    key="errorDetails"
  >
    <a
      className="uu5-common-error-details-button"
      onClick={[Function]}
    >
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zobrazit podrobnosti o chybě.",
            "en": "View error details.",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
      <span
        className="mdi mdi-menu-down uu5-common-error-icon"
      />
    </a>
    <div
      className="uu5-common-error-details-body"
      id="uuID-error"
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="uu5-common-error-pre-wrapper"
      >
        <Button
          baseline={false}
          bgStyle="filled"
          borderRadius={null}
          className="uu5-common-error-copy-info-button"
          colorSchema={null}
          content={
            <Lsi
              allowTags={Array []}
              className={null}
              content={null}
              controlled={true}
              disabled={false}
              dynamic={false}
              hidden={false}
              id={null}
              ignoreInnerHTML={false}
              language={null}
              lsi={
                Object {
                  "cs": "Kopírovat podrobnosti o chybě",
                  "en": "Copy error details",
                }
              }
              mainAttrs={null}
              name={null}
              nestingLevel={null}
              noIndex={false}
              params={null}
              parent={null}
              pureRender={false}
              ref_={null}
              selected={false}
              style={null}
              tooltip={null}
            />
          }
          controlled={true}
          disabled={false}
          displayBlock={false}
          dynamic={false}
          elevation={null}
          elevationHover={null}
          hidden={false}
          href={null}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          offset={0}
          onClick={[Function]}
          pressed={false}
          pureRender={false}
          ref_={null}
          selected={false}
          size="m"
          smoothScroll={1000}
          style={null}
          target="_self"
          tooltip={null}
        />
        <pre
          className="uu5-common-error-pre"
        >
          {
  "message": "Error",
  "data": null,
  "stackTrace": [],
  "uuIdentity": null,
  "url": "http://example.com/test_url_for_tools-ifc.test.js?param=value",
  "time": null,
  "navigator": {
    "appCodeName": "Mozilla",
    "appName": "Netscape",
    "appVersion": "4.0",
    "cookieEnabled": true,
    "hardwareConcurrency": 8,
    "language": "en-US",
    "languages": [
      "en-US",
      "en"
    ],
    "onLine": true,
    "platform": "",
    "product": "Gecko",
    "productSub": "20030107",
    "userAgent": "Mozilla/5.0 (win32) AppleWebKit/537.36 (KHTML, like Gecko) jsdom",
    "vendor": "Apple Computer, Inc.",
    "vendorSub": ""
  },
  "libs": {}
}
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props name 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 5`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 6`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 7`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 8`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 9`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 10`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 11`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 12`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 13`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 14`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 15`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 16`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 17`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 18`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props nestingLevel 19`] = `
<span
  className="uu5-common-error uu5-common-error-inline uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  Error
</span>
`;

exports[`UU5.Common.Error props nestingLevel 20`] = `
<span
  className="uu5-common-error uu5-common-error-inline uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  Error
</span>
`;

exports[`UU5.Common.Error props noIndex 1`] = `
<div
  className="uu5-common-error uu5-noindex uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props noIndex 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props noIndex 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props noIndex 4`] = `
<div
  className="uu5-common-error uu5-noindex uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props pureRender 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props pureRender 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props pureRender 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props pureRender 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props selected 1`] = `
<div
  className="uu5-common-error uu5-common-selected uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props selected 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props selected 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props selected 4`] = `
<div
  className="uu5-common-error uu5-common-selected uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props silent 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-error-silent uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props silent 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props silent 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props silent 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-error-silent uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props style 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props style 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props style 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props style 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props textCorrector 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props textCorrector 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props textCorrector 3`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props textCorrector 4`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props tooltip 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props without test tool API test01 - default snapshot 1`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={null}
  errorData={null}
  errorDataSpace={null}
  errorInfo={null}
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={false}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={false}
  style={null}
  tooltip={null}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test02 - erroData 1`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={null}
  errorData={
    Object {
      "invalidToken": Object {
        "data": "some data...",
        "id": "123",
      },
    }
  }
  errorDataSpace={null}
  errorInfo={null}
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={false}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={false}
  style={null}
  tooltip={null}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
        <div
          className="uu5-common-error-pre-wrapper"
          key="errorData"
        >
          <pre
            className="uu5-common-error-pre"
          >
            {
  "invalidToken": {
    "id": "123",
    "data": "some data..."
  }
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test02 - erroData 2`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={null}
  errorData={
    Object {
      "invalidToken": Object {
        "data": "some new set props data...",
        "id": "456",
      },
    }
  }
  errorDataSpace={null}
  errorInfo={null}
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={false}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={false}
  style={null}
  tooltip={null}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
        <div
          className="uu5-common-error-pre-wrapper"
          key="errorData"
        >
          <pre
            className="uu5-common-error-pre"
          >
            {
  "invalidToken": {
    "id": "456",
    "data": "some new set props data..."
  }
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test03 - error 1`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={[Error: This is unhandled exception from Jest]}
  errorData={null}
  errorDataSpace={null}
  errorInfo={null}
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={false}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={false}
  style={null}
  tooltip={null}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test04 - error 1`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={null}
  errorData={null}
  errorDataSpace={null}
  errorInfo={null}
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={false}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={false}
  style={null}
  tooltip={null}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test04 - error 2`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={null}
  errorData={null}
  errorDataSpace={null}
  errorInfo={null}
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={false}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={true}
  style={null}
  tooltip={null}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-error-silent uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test05 - inline 1`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={null}
  errorData={null}
  errorDataSpace={null}
  errorInfo={null}
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={false}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={false}
  style={null}
  tooltip={null}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test05 - inline 2`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={null}
  errorData={null}
  errorDataSpace={null}
  errorInfo={null}
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={true}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={false}
  style={null}
  tooltip={null}
>
  <span
    className="uu5-common-error uu5-common-error-inline uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    Error
  </span>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test06 - moreInfo 1`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="errorID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props without test tool API test06 - moreInfo 2`] = `
<div
  className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
  id="errorID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-common-error-main-wrapper"
  >
    <div
      className="uu5-common-error-icon-wrapper"
    >
      <span
        className="mdi mdi-alert-circle uu5-common-error-icon"
      />
    </div>
    <div
      className="uu5-common-error-content"
    >
      Error
    </div>
  </div>
  <div
    className="uu5-common-error-details"
    key="errorDetails"
  >
    <a
      className="uu5-common-error-details-button"
      onClick={[Function]}
    >
      <Lsi
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id={null}
        ignoreInnerHTML={false}
        language={null}
        lsi={
          Object {
            "cs": "Zobrazit podrobnosti o chybě.",
            "en": "View error details.",
          }
        }
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        params={null}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      />
      <span
        className="mdi mdi-menu-down uu5-common-error-icon"
      />
    </a>
    <div
      className="uu5-common-error-details-body"
      id="errorID-error"
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        className="uu5-common-error-pre-wrapper"
      >
        <Button
          baseline={false}
          bgStyle="filled"
          borderRadius={null}
          className="uu5-common-error-copy-info-button"
          colorSchema={null}
          content={
            <Lsi
              allowTags={Array []}
              className={null}
              content={null}
              controlled={true}
              disabled={false}
              dynamic={false}
              hidden={false}
              id={null}
              ignoreInnerHTML={false}
              language={null}
              lsi={
                Object {
                  "cs": "Kopírovat podrobnosti o chybě",
                  "en": "Copy error details",
                }
              }
              mainAttrs={null}
              name={null}
              nestingLevel={null}
              noIndex={false}
              params={null}
              parent={null}
              pureRender={false}
              ref_={null}
              selected={false}
              style={null}
              tooltip={null}
            />
          }
          controlled={true}
          disabled={false}
          displayBlock={false}
          dynamic={false}
          elevation={null}
          elevationHover={null}
          hidden={false}
          href={null}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          offset={0}
          onClick={[Function]}
          pressed={false}
          pureRender={false}
          ref_={null}
          selected={false}
          size="m"
          smoothScroll={1000}
          style={null}
          target="_self"
          tooltip={null}
        />
        <pre
          className="uu5-common-error-pre"
        >
          {
  "message": "Error",
  "data": null,
  "stackTrace": [],
  "uuIdentity": null,
  "url": "http://example.com/test_url_for_tools-ifc.test.js?param=value",
  "time": null,
  "navigator": {
    "appCodeName": "Mozilla",
    "appName": "Netscape",
    "appVersion": "4.0",
    "cookieEnabled": true,
    "hardwareConcurrency": 8,
    "language": "en-US",
    "languages": [
      "en-US",
      "en"
    ],
    "onLine": true,
    "platform": "",
    "product": "Gecko",
    "productSub": "20030107",
    "userAgent": "Mozilla/5.0 (win32) AppleWebKit/537.36 (KHTML, like Gecko) jsdom",
    "vendor": "Apple Computer, Inc.",
    "vendorSub": ""
  },
  "libs": {}
}
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`UU5.Common.Error props without test tool API test07 - errorInfo 1`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={null}
  errorData={null}
  errorDataSpace={null}
  errorInfo={null}
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={false}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={false}
  style={null}
  tooltip={null}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test07 - errorInfo 2`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={null}
  errorData={null}
  errorDataSpace={null}
  errorInfo="Please contact +4U Helpdesk"
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={false}
  mainAttrs={null}
  moreInfo={false}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={false}
  style={null}
  tooltip={null}
>
  <div
    className="uu5-common-error uu5-common-error-small-box uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    <div
      className="uu5-common-error-main-wrapper"
    >
      <div
        className="uu5-common-error-icon-wrapper"
      >
        <span
          className="mdi mdi-alert-circle uu5-common-error-icon"
        />
      </div>
      <div
        className="uu5-common-error-content"
      >
        Error
      </div>
    </div>
  </div>
</Error>
`;

exports[`UU5.Common.Error props without test tool API test08 - All Error props is set 1`] = `
<Error
  bgStyle="filled"
  className={null}
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  error={[Error: Unhandled exception]}
  errorData={
    Object {
      "invalidToken": Object {
        "data": "some data...",
        "id": "123",
      },
    }
  }
  errorDataSpace={null}
  errorInfo="Please contact helpdesk."
  hidden={false}
  id="errorID"
  ignoreInnerHTML={false}
  inline={true}
  mainAttrs={null}
  moreInfo={true}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  silent={true}
  style={null}
  tooltip={null}
>
  <span
    className="uu5-common-error uu5-common-error-inline uu5-common-error-silent uu5-common-bg-style-filled"
    id="errorID"
    style={Object {}}
    title={null}
  >
    Error
  </span>
</Error>
`;
